# JobSentinel

./: .claudeignore  .env.example  .envrc  .eslintignore  .gitignore  .lintstagedrc.json  .lycheeignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlint.jsonc  .markdownlintignore  .mega-linter.yml  .pre-commit-config.yaml  .pylintrc  .vale.ini  ADDITIONAL_IMPROVEMENTS.md  AGENTS.md  ANALYSIS_EXECUTIVE_SUMMARY.md  ARCHITECTURE.md  AUDIT_COMPLETION_REPORT.md  BUGS_SQUASHED.md  CHANGELOG.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_COMPLETED.md  CLEANUP_RECOMMENDATIONS.md  CLEANUP_SUMMARY.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_TEST_GUIDE.md  COMPREHENSIVE_TEST_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_TEST_IMPLEMENTATION_REPORT.md  COMPREHENSIVE_TEST_PLAN.md  COMPREHENSIVE_TEST_SUITE_SUMMARY.md  CONTRIBUTING.md  CORE_MODULES_100PCT_COVERAGE_REPORT.md  CORE_MODULES_TEST_COVERAGE_FINAL.md  CORE_MODULE_COVERAGE_REPORT.md  COST.md  (+169 more)
crates/jobsentinel-ai/: Cargo.toml
crates/jobsentinel-ai/src/: lib.rs  provider.rs  tests.rs
crates/jobsentinel-application/: Cargo.toml
crates/jobsentinel-application/src/: bookmarklet.rs  credentials.rs  desktop.rs  external_ai.rs  fetcher.rs  lib.rs  linkedin_workbench.rs  pack_runtime.rs  pack_runtime_tests.rs  pending.rs  privacy_doctor.rs  recovery.rs  restricted_source_consent.rs  service.rs  smart_paste.rs  test_support.rs  types.rs  v3_foundation.rs  v3_source_governance.rs  (+3 more)
crates/jobsentinel-assistance/: Cargo.toml
crates/jobsentinel-core/: Cargo.toml
crates/jobsentinel-credentials/: Cargo.toml
crates/jobsentinel-documents/: Cargo.toml
crates/jobsentinel-domain/: Cargo.toml
crates/jobsentinel-intelligence/: Cargo.toml
crates/jobsentinel-local-ai/: Cargo.toml  models.lock.toml
crates/jobsentinel-network/: Cargo.toml
crates/jobsentinel-notifications/: Cargo.toml
crates/jobsentinel-platform/: Cargo.toml
crates/jobsentinel-security/: Cargo.toml
crates/jobsentinel-sources/: Cargo.toml
crates/jobsentinel-storage/: Cargo.toml
src-tauri/: .cargo-mutants.toml  Cargo.toml  clippy.toml  deny.toml  tauri.conf.json  test_cache.sh
src-tauri/.sqlx/: query-013045056eb80c6e06459793f3c3bbc2c18081cdab57d89497f5ef30c234f643.json  query-033d889b87bf8796fc9951113d7d0203b62e943db1addda705b2ce7c0f8d73d2.json  query-0a1e0dd1de84a64ae9aa6b293a1644d58332bdacb915bbb9c146ba10e819d44d.json  query-11e285ff2b9fc05f5b5f94b2a94bf5150849a434f4ea3692796492ae12017281.json  query-1a20c5268a52db5fcc8d4ffa26e6e8b8ade595235abeb98550b41a216927ba9d.json  query-1edc9ac49c1eabefff32ed34d5daed54d834878cdd5162337404066d4f9d2d89.json  query-2d65f96ec69427f49d38eb0ead68eebc0a0d6c0c2f75dcb6636740025aa79a8d.json  query-2d97cf1fdcaf9dd6db58357e0f677bbd48cb7c18f199f32c49ebc5cf690e3f48.json  query-465651fd19d9254150e0c886cc1256c2f8544bdff2c99b5e06ae137e80cc9c0a.json  query-481107776064379850ff36dd44fee408c77f15fa11f40fb339e89fc63d54c4bd.json  query-52343fb32ce7c70033725870df9f464fd3b03adbf51458cca9ce11542a5c8302.json  query-68f92328f4bc1b2eba9a483dfb44f0f484fdabb9a035d652b10293b9284b414a.json  query-6e0e90f7a6cd5e0c9218b9ccb8e7a2a8d994dde3ac0eebff4e110f7acffef8ad.json  query-8d85896766105692a61106be6ca25612cc06e6335520c0ebf84837c2ec5eb4a1.json  query-8e9515d960a78dddf83b77373505a28092a3414890935b991fdb363c4e8622b6.json  query-938f1f0bdd5ad08d5d31ef077cdb3d2ff3d4f31984d4469ccd6227b68cd20e4d.json  query-9d08ea6eef4d56bd93a006b3e7bcbf29c915ae221353ca73a90f04a4b6163006.json  query-a083ea3ab09810f3f536e20f8c0b7fc1a47606a728eba6cb00df40be37abc663.json  query-a5873cbb8f6072a01668e0bedef3a31f838e6d199f4ee84c775c686ac199dba9.json  query-abfc5da2c1d376c5d8a4c027376e6137972ad9790d08f9df12cd3f421f3ec842.json  query-b6ad18e04c46a9b5cc57eab67f179a571948650722ca5f43de2e3d0aaceba2ae.json  query-baa94bb5fcbb3dfbba4d657edb78c2a641c3ea695b96a93754130bd9861e5bd5.json  query-e1abcae12d897ff0d40471f2ab0ddde9e2eb1ecf9e00b608f3fb601468dc36a5.json  query-e27434b0b9d81c7c921cea7e7008f9f3dc2251d798f665c8f102b67ea76df6ff.json  query-ed7ac9cb301a81861002ac22094011fd482fd05ae3e5f3505622504ec0842f3a.json  query-edd9b91dd91f4a047359af9c115092b3ff4e3515ca529f13c4a66ba0eb5f3a47.json  query-f133f6910fa5c79293d5efd6f6ac8b2c0eaf98df306b8de6f29b11ad9d5a192d.json  query-fb8e464ced27118fdf85f6282a277c7d2762610c5d2cc31793d04f94f7251709.json
src-tauri/capabilities/: default.json
src-tauri/coverage/: index.html
src-tauri/icons/: icon.icns
src-tauri/migrations/: 00000000000000_initial_schema.sql  00000000000001_optimize_indexes.sql  00000000000002_screening_answer_learning.sql  00000000000003_add_missing_scraper_configs.sql  00000000000004_screening_answer_answer_types.sql  00000000000005_minimize_application_event_data.sql  00000000000007_secret_vault.sql  00000000000009_disable_linkedin_cookie_source_metadata.sql  20250104000000_create_jobs_table.sql  20251115000000_add_integrity_tables.sql  20251115010000_add_application_tracking.sql  20251115020000_add_resume_matcher.sql  20251115030000_add_application_automation.sql  20251115040000_add_salary_data.sql  20251115050000_add_market_intelligence.sql  20251115060000_add_company_health.sql  20260115000000_add_hidden_column.sql  20260116000000_add_bookmarked_column.sql  20260116000001_add_notes_column.sql  20260116000002_add_interviews_table.sql  20260116000002_fix_interviews_schema.sql  20260116000003_add_post_interview_notes.sql  20260117000000_add_ghost_detection.sql  20260117000001_add_cover_letter_templates.sql  20260117000002_add_interview_prep.sql  20260117000003_add_saved_searches.sql  20260117000004_add_notification_preferences.sql  20260117000005_add_resume_drafts.sql  20260118000000_add_scraper_health.sql  20260118000001_add_ghost_feedback.sql  20260118000002_add_scoring_config.sql
src-tauri/src/: app.rs  command_handlers.rs  lib.rs  main.rs
src-tauri/tests/: api_contract_test.rs  automation_integration_test.rs  cow_zero_copy_tests.rs  credential_test.rs  database_integration_test.rs  live_scraper_test.rs  scheduler_integration_test.rs  scraper_integration_test.rs  scraping_pipeline_integration.rs
(+4777 files in other folders)
