[workspace]
members = ["crates/jobsentinel-core", "src-tauri"]
resolver = "2"

[workspace.package]
version = "2.9.1"
edition = "2021"
authors = ["Chad Boyd"]
license = "MIT"
repository = "https://github.com/cboyd0319/JobSentinel"
keywords = ["job-search", "assistant", "privacy", "tauri", "desktop-app"]
categories = ["command-line-utilities"]

[workspace.dependencies]
anyhow = "=1.0.103"
arboard = "=3.6.1"
argon2 = { version = "=0.5.3", default-features = false, features = ["alloc", "zeroize"] }
async-trait = "=0.1.89"
basic-toml = "=0.1.10"
candle-core = "=0.10.2"
candle-nn = "=0.10.2"
chacha20poly1305 = "=0.10.1"
chrono = { version = "=0.4.45", features = ["serde"] }
chromiumoxide = "=0.9.1"
dirs = "=6.0.0"
docx-rs = "=0.4.20"
dotenvy = "=0.15.7"
futures = "=0.3.32"
futures-util = "=0.3.32"
hex = "=0.4.3"
hf-hub = { version = "=0.5.0", default-features = false, features = ["tokio", "rustls-tls"] }
jobsentinel-core = { path = "crates/jobsentinel-core", version = "=2.9.1" }
keyring = "=4.1.2"
lettre = { version = "=0.11.22", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }
libsqlite3-sys = { version = "=0.37.0", default-features = false, features = ["bundled-sqlcipher-vendored-openssl"] }
objc2 = "=0.6.4"
objc2-foundation = { version = "=0.3.2", default-features = false, features = ["std", "NSString"] }
objc2-local-authentication = { version = "=0.3.2", default-features = false, features = ["std", "LAContext"] }
pdf-extract = "=0.12.0"
proptest = "=1.11.0"
quick-xml = "=0.41.0"
regex = "=1.12.4"
reqwest = { version = "=0.13.4", default-features = false, features = ["json", "query", "rustls", "system-proxy"] }
scopeguard = "=1.2.0"
scraper = "=0.27.0"
security-framework = "=3.7.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"
sqlx = { version = "=0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "migrate", "chrono", "macros"] }
tauri = { version = "=2.11.3", features = ["tray-icon"] }
tauri-build = { version = "=2.6.3", features = [] }
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-secure-storage = "=1.5.0"
tauri-plugin-shell = "=2.3.5"
tempfile = "=3.27.0"
thiserror = "=2.0.18"
tokenizers = { version = "=0.23.1", default-features = false, features = ["onig"] }
tokio = { version = "=1.52.3", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
url = "=2.5.8"
urlencoding = "=2.1.3"
uuid = { version = "=1.23.3", features = ["v4"] }
windows = { version = "=0.62.2", features = ["Win32_Foundation", "Win32_System_Threading"] }
wiremock = "=0.6.5"
zeroize = "=1.9.0"
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
too_many_lines = "allow"
needless_raw_string_hashes = "allow"
unreadable_literal = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
unused_async = "allow"
unused_self = "allow"
redundant_closure_for_method_calls = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
if_not_else = "allow"
items_after_statements = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
option_if_let_else = "allow"
map_unwrap_or = "allow"
uninlined_format_args = "allow"
single_match_else = "allow"
manual_let_else = "allow"
redundant_else = "allow"
unnecessary_wraps = "allow"
return_self_not_must_use = "allow"
derive_partial_eq_without_eq = "allow"
significant_drop_tightening = "allow"
bool_to_int_with_if = "allow"
struct_field_names = "allow"
used_underscore_binding = "allow"
format_push_string = "allow"
cast_possible_wrap = "allow"
missing_const_for_fn = "allow"
needless_pass_by_value = "allow"
manual_midpoint = "allow"
ref_option = "allow"
comparison_chain = "allow"
use_self = "allow"
ignored_unit_patterns = "allow"
should_implement_trait = "allow"
redundant_pub_crate = "allow"
match_like_matches_macro = "allow"
equatable_if_let = "allow"
single_char_pattern = "allow"
wildcard_imports = "allow"
derivable_impls = "allow"
single_char_add_str = "allow"
useless_format = "allow"
redundant_field_names = "allow"
unwrap_or_default = "allow"
manual_is_ascii_check = "allow"
collapsible_str_replace = "allow"
ptr_arg = "allow"
suboptimal_flops = "allow"
manual_range_patterns = "allow"
doc_link_with_quotes = "allow"
manual_clamp = "allow"
explicit_iter_loop = "allow"
default_trait_access = "allow"
manual_string_new = "allow"
collection_is_never_read = "allow"
manual_pattern_char_comparison = "allow"
unnecessary_debug_formatting = "allow"
unnecessary_cast = "allow"

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
panic = "abort"
overflow-checks = true
