[build-system]
requires = ["setuptools>=61.0", "build>=0.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "job-search-automation"
version = "1.0.0" # This will be updated by semantic-release

description = "Automated job search tool with web scraping, resume matching, ATS compatibility scanner, and Slack/email notifications. Self-hosted Python job board aggregator."
authors = [{name = "Project Author", email = "noreply@users.noreply.github.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiofiles>=23,<24",
    "aiohttp>=3.9,<4",
    "aiosqlite>=0.20,<0.21",
    "beautifulsoup4>=4.12,<5",
    "cryptography>=42,<43",
    "Flask>=3.0,<3.1",
    "google-api-core>=2.14,<3",
    "google-auth>=2.23,<3",
    "google-cloud-scheduler>=2.13,<3",
    "google-cloud-storage>=2.16,<3",
    "httpx>=0.26,<0.29",
    "lxml>=4.9,<6",
    "playwright>=1.44,<1.56",
    "psutil>=5.9,<6",
    "pydantic>=2.6,<2.11",
    "python-dotenv>=1.0,<2",
    "requests>=2.31,<3",
    "rich>=13.7,<14",
    "sqlalchemy>=2.0,<2.1",
    "sqlmodel>=0.0.14,<0.0.17",
    "tenacity>=9.0,<9.2",


[project.optional-dependencies]
resume = [
    "pdfplumber>=0.10,<0.11",
    "python-docx>=1.0,<1.1",
    "spacy>=3.7,<3.9",
    "pdfminer.six>=20221105",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "python-Levenshtein>=0.21.0",
    "regex>=2023.0.0",
]
mcp = [
    "mcp>=1.2,<2",
    "httpx-sse>=0.4,<0.5",
    "jsonschema>=4.20,<5",
    "pydantic-settings>=2.2,<2.3",
]

[tool.semantic_release]
branch = "main"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version} [skip ci]"
version_toml = ["pyproject.toml:project.version"]
version_files = ["VERSION"]

build_command = "python -m pip install build && python -m build"
upload_to_pypi = false
upload_to_release = true
remote = { type = "github", token = "GH_TOKEN" }
