[package]
name = "jobsentinel"
description = "Privacy-preserving local-first job-search assistant for desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
ocr = ["jobsentinel-core/ocr"]
embedded-ml = ["jobsentinel-core/embedded-ml"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
arboard.workspace = true
chrono.workspace = true
jobsentinel-core.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-secure-storage.workspace = true
tauri-plugin-shell.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
keyring.workspace = true
tempfile.workspace = true

[lints]
workspace = true
