[package]
name = "jobsentinel"
description = "Privacy-preserving local-first job-search assistant for desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
ocr = ["jobsentinel-application/ocr"]
embedded-ml = ["jobsentinel-application/embedded-ml"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
arboard.workspace = true
chrono.workspace = true
jobsentinel-application.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-shell.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
