[package]
name = "jobsentinel-assistance"
description = "User-reviewed job-search assistance workflows for JobSentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
chromiumoxide.workspace = true
futures-util.workspace = true
jobsentinel-domain.workspace = true
jobsentinel-platform.workspace = true
jobsentinel-security.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
