[package]
name = "jobsentinel-credentials"
description = "Encrypted credential policy and runtime services for JobSentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
argon2.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
jobsentinel-platform.workspace = true
jobsentinel-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
