[package]
name = "jobsentinel-domain"
description = "Pure JobSentinel business values and canonical normalization"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
jobsentinel-security.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
url.workspace = true

[lints]
workspace = true
