[package]
name = "jobsentinel-intelligence"
description = "Pure job-quality, ranking, salary, and market analysis rules for JobSentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
