[package]
name = "jobsentinel-network"
description = "DNS-safe outbound target resolution for JobSentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
test-support = []

[dependencies]
jobsentinel-security.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
wiremock.workspace = true

[lints]
workspace = true
