[package]
name = "jobsentinel-notifications"
description = "Bounded notification formatting and delivery transports for JobSentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
test-support = []

[dependencies]
anyhow.workspace = true
chrono.workspace = true
jobsentinel-domain.workspace = true
jobsentinel-intelligence.workspace = true
jobsentinel-network.workspace = true
jobsentinel-security.workspace = true
lettre.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
