[package]
name = "jobsentinel-platform"
description = "Operating-system paths and local file-permission policy for JobSentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chacha20poly1305.workspace = true
dirs.workspace = true
hex.workspace = true
jobsentinel-security.workspace = true
keyring.workspace = true
serde.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
objc2-local-authentication.workspace = true
security-framework.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
