[package]
name = "jobsentinel-sources"
description = "User-directed source adapters and external job-search lookups for JobSentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
jobsentinel-domain.workspace = true
jobsentinel-network.workspace = true
jobsentinel-security.workspace = true
quick-xml.workspace = true
regex.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true

[dev-dependencies]
jobsentinel-network = { workspace = true, features = ["test-support"] }
proptest.workspace = true
wiremock.workspace = true

[lints]
workspace = true
