[package]
name = "jobsentinel-storage"
description = "SQLCipher storage, migrations, integrity, backup, and job repositories for JobSentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
jobsentinel-domain.workspace = true
jobsentinel-documents.workspace = true
jobsentinel-platform.workspace = true
jobsentinel-security.workspace = true
libsqlite3-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
futures.workspace = true
hex.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
